--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@nuxt/types": "^2.18.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@testing-library/vue": "^8.1.0",
+    "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
-    "vue": "latest",
-    "@nuxt/types": "^2.18.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "tailwindcss-primeui": "^0.3.4",
+    "uuid": "^10.0.0",
+    "vue": "latest"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.14.1",
+    "@primevue/nuxt-module": "^4.0.5",
+    "@types/uuid": "^10.0.0",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "happy-dom": "^14.12.3",
     "playwright-core": "^1.46.1",
-    "vitest": "^2.0.5",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "vitest": "^2.0.5"
   }
 }
