--- a/gcp/docker/Dockerfile_sandbox
+++ b/gcp/docker/Dockerfile_sandbox
@@ -18,37 +18,32 @@ RUN apt-get update && apt-get install -y \
     nginx \
     git-core \
     openssl \
-    libssl-dev
-
+    libssl-dev \
+    npm
+    
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Cloud Sql Proxy
-RUN apt-get update \
-  && apt-get install --no-install-recommends -y \
-    wget \
-  ;
-RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
-RUN chmod +x cloud_sql_proxy
-
-# Install extensions
-RUN docker-php-ext-install pdo_mysql  zip exif pcntl
-RUN docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/include/
-RUN docker-php-ext-install gd
-
-# Install composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN mkdir -p /run/nginx
 
 COPY gcp/nginx/nginx.conf /etc/nginx/nginx.conf
 
+# making app dir
 RUN mkdir -p /app
 
 COPY . /app
 
-COPY gcp/docker/.env_sandbox /app/.env
+COPY gcp/docker/.env_production /app/.env
+
 
 RUN chown -R www-data: /app
+
+
+# Install npm dependencies & Build the application
+RUN cd /app && npm install
+RUN cd /app && npm run build
+
+RUN chown -R www-data: /.output/dist
+
 
 CMD sh /app/gcp/docker/startup.sh
