--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@testing-library/vue": "^8.1.0",
+    "dompurify": "^3.1.6",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
     "sass": "^1.77.8",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@nuxt/test-utils": "^3.14.1",
     "@primevue/nuxt-module": "^4.0.5",
+    "@types/dompurify": "^3.0.5",
     "@types/uuid": "^10.0.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
