--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
       "moduleResolution": "node",
       "resolveJsonModule": true
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   }
   
